2008-06-19  higepon  <higepon@users.sourceforge.jp>

        * Pair.h (scheme): Added append(Object l, Object o) for (append ...).

        * compiler.scm (merge-insn): Added (not 'CONSTANT_PUSH) for PUSH_FRAME.

        * VM.cpp (VM::run): Removed APPEND instruction, it is buggy. We use appendEx instead.

2008-06-18  higepon  <higepon@users.sourceforge.jp>

        * main.cpp (main): Added -l option.

        * VM.cpp (VM::storeCallSample): Improved profiler results.

2008-06-17  higepon  <higepon@users.sourceforge.jp>

        * library.scm (string->lines): Added string->lines procedure.
                         (filter-map): Added filter-map, car+cdr (SRFI-1).
                                     : Added map-with-index.

        * Port.cpp (FileBinaryInputPort::FileBinaryInputPort): Fixed file open error condition.

	* VM.cpp (VM::applyClosure): Improved apply procedure. It used to use C stack, so changed not to use C stack.

2008-06-16  higepon  <higepon@users.sourceforge.jp>

	* freeproc.cpp : Fixed (exit) procedure. thx leque.

	* freeproc.cpp (scheme::callProcessEx): Added (call-process "ls").

	* compiler.scm: Improved stack trace, showing file and lineno for precompiled code.

	* scripts/pp.scm: Added for precompiled code.

2008-06-15  higepon  <higepon@users.sourceforge.jp>

	* free-vars.scm (*free-vars*): Added set-source-info for compiler.

2008-06-11  higepon  <higepon@users.sourceforge.jp>

	* library.scm (cons*): Added cons*.

	* freeproc.cpp: Added char>=?, char>? and char<=? and char<?.

	* library.scm (sort!): Fixed SEGV bug.
	                       In library.scm, we can't use do macro.
	                       Because do macro depend on match macro.

2008-06-10  higepon  <higepon@users.sourceforge.jp>

	* freeproc.cpp (scheme::dynamicWindEx): Added dynamic-wind. It's dummy for psyntax.pp.

2008-06-09  higepon  <higepon@users.sourceforge.jp>

	* VM.cpp : Rewrote multiple values support.

2008-06-06  higepon  <higepon@users.sourceforge.jp>
