@@ -104,29 +104,13 @@ struct Pair EXTEND_GC
         return start;
     }
 
-    static Object append(Object l) {
-        gc_vector<Object> lists;
-        for (Object p = l; p.isPair(); p = p.cdr()) {
-            lists.push_back(p.car());
-        }
-        printf("lists.size() = %d\n", lists.size());
-        Object ret = lists[lists.size() - 1];
-        for (int i = lists.size() - 2; i >= 0; i--) {
-            if (!lists[i].isPair()) {
-                // error
-            }
-            ret = append2(lists[i], ret);
-        }
-        return ret;
+    static Object appendD2(Object l, Object o)
+    {
+        if (!l.isPair()) return o;
+        const Object last = getLastPair(l);
+        last.cdr() = o;
+        return l;
     }
-
-
-//     // append
-//     static Object append(Object list1, Object list2)
-//     {
-//         return appendD(cloneList(list1), cloneList(list2));
-//     }
-
 
     static Object getLastPair(Object obj)
     {
