@@ -131,4 +131,5 @@
     (call-process ,(lambda e (error "call-process not implemented")))
     (%get-closure-name ,(lambda e (error "%get-closure-name not implemented")))
     (append ,append)
+    (append! ,append!)
     ))
