@@ -1,5 +1,23 @@
-(begin 0 1 2 3 4  5 6 7 8 9 0 1 2 3 4  5 6 7 8 9 0 1 2 3 4  5 6 7 8 9 0 1 2 3 4  5 6 7 8 9 0 1 2 3 4  5 6 7 8 9 0 1 2 3 4  5 6 7 8 9 0 1 2 3 4  5 6 7 8 9 0 1 2 3 4  5 6 7 8 9 0 1 2 3 4  5 6 7 8 9 0 1 2 3 4  5 6 7 8 9 0 1 2 3 4  5 6 7 8 9 0 1 2 3 4  5 6 7 8 9 0 1 2 3 4  5 6 7 8 9 0 1 2 3 4  5 6 7 8 9 0 1 2 3 4  5 6 7 8 9 0 1 2 3 4  5 6 7 8 9 0 1 2 3 4  5 6 7 8 9 0 1 2 3 4  5 6 7 8 9 0 1 2 3 4  5 6 7 8 9 0 1 2 3 4  5 6 7 8 9 0 1 2 3 4  5 6 7 8 9 0 1 2 3 4  5 6 7 8 9 0 1 2 3 4  5 6 7 8 9 0 1 2 3 4  5 6 7 8 9 0 1 2 3 4  5 6 7 8 9 0 1 2 3 4  5 6 7 8 9 0 1 2 3 4  5 6 7 8 9 0 1 2 3 4  5 6 7 8 9 0 1 2 3 4  5 6 7 8 9 0 1 2 3 4  5 6 7 8 9 0 1 2 3 4  5 6 7 8 9 0 1 2 3 4  5 6 7 8 9 0 1 2 3 4  5 6 7 8 9 0 1 2 3 4  5 6 7 8 9 0 1 2 3 4  5 6 7 8 9 0 1 2 3 4  5 6 7 8 9 0 1 2 3 4  5 6 7 8 9 0 1 2 3 4  5 6 7 8 90 1 2 3 4  5 6 7 8 9 0 1 2 3 4  5 6 7 8 9 0 1 2 3 4  5 6 7 8 9 0 1 2 3 4  5 6 7 8 9 0 1 2 3 4  5 6 7 8 9 0 1 2 3 4  5 6 7 8 9 0 1 2 3 4  5 6 7 8 9 0 1 2 3 4  5 6 7 8 9 0 1 2 3 4  5 6 7 8 9 0 1 2 3 4  5 6 7 8 9 0 1 2 3 4  5 6 7 8 9 0 1 2 3 4  5 6 7 8 9 0 1 2 3 4  5 6 7 8 9 0 1 2 3 4  5 6 7 8 9 0 1 2 3 4  5 6 7 8 9 0 1 2 3 4  5 6 7 8 9 0 1 2 3 4  5 6 7 8 9 0 1 2 3 4  5 6 7 8 9 0 1 2 3 4  5 6 7 8 9)
 
+
+(take '(a b c d e)  2)
+(drop '(a b c d e)  2)
+
+(take '(1 2 3 . d) 2)
+(drop '(1 2 3 . d) 2)
+(take '(1 2 3 . d) 3)
+(drop '(1 2 3 . d) 3)
+(take-right '(a b c d e) 2)
+(drop-right '(a b c d e) 2)
+(take-right '(1 2 3 . d) 2)
+(drop-right '(1 2 3 . d) 2)
+(take-right '(1 2 3 . d) 0)
+(drop-right '(1 2 3 . d) 0)
+
+
+(exit)
+(define a '(1 2))
+(print (append a a))
 
 (print (command-line))
 ;; (define (hoge i)
